Conversation dots aligned correctly

--- a/src/css/chatbot.css
+++ b/src/css/chatbot.css
@@ -1,5 +1,5 @@
 .chatbot {
-  width: 20rem;
+  width: 30rem;
 }
 
 .chatbot-icon {
@@ -14,6 +14,7 @@
 }
 
 .message {
+  width: fit-content;
   text-align: left;
   padding: 0.25rem 0.5rem;
   border-radius: 10px;
@@ -21,14 +22,13 @@
 }
 
 .message.bot {
-  float: left;
   background-color: #eee;
   color: black;
 }
 .message.user {
-  float: right;
   background-color: rgb(118, 184, 206);
   color: white;
+  margin-left: auto;
 }
 .options {
   display: flex;
